--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ along with Simulador de la Màquina Senzilla.  If not, see <http://www.gnu.org/l
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Simulador Màquina Senzilla (alfa v1.0.5)</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Simulador Màquina Senzilla 1.0.6 &beta;</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
