Afegit link als exercicis i canvi representació de links.

--- a/index.html
+++ b/index.html
@@ -623,7 +623,13 @@ along with Simulador de la Màquina Senzilla.  If not, see <http://www.gnu.org/l
                     </form>
 					<br>
 					<!-- EDITAR MEMORIA -->
+					<div>
 					<button type="button" id="btnLaunch" class="btn">Editar memòria</button>
+					</div>
+					<br>
+					<div>
+						<a href="https://github.com/simuladormaquinasenzilla/SimuladorMaquinaSenzilla/tree/master/exercices" target="_blank">Exercicis d'exemple.</a>
+					</div>
 					<div class="modal fade" id="myModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
@@ -636,7 +642,7 @@ along with Simulador de la Màquina Senzilla.  If not, see <http://www.gnu.org/l
 									<textarea type="text" rows="30" id="txtInput" value="test1"></textarea>
 								</div>
 								<div class="modal-footer">
-									<button type="button" class="btn btn-default" data-dismiss="modal">Tencar</button>
+									<button type="button" class="btn btn-default" data-dismiss="modal">Tancar</button>
 									<button type="button" id="btnSave" class="btn btn-primary">Guardar</button>
 								</div>
 							</div>
@@ -1238,7 +1244,7 @@ along with Simulador de la Màquina Senzilla.  If not, see <http://www.gnu.org/l
             <div class="row">
                 <div class="col-lg-12 text-center">
 					<p>Bryan Pierre</p>
-					<p>u1906524@campus.udg.edu</p>
+					<p>SimuladorMaquinaSenzilla@gmail.com</p>
                 </div>
             </div>
         </div>
